--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "aos": "^2.3.4",
     "jquery": "^3.6.0",
+    "gh-pages": "^4.0.0",
     "lightbox2": "^2.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
