feat: Implement dark mode toggle and enhance UI components
- Added DarkModeToggle component for switching between light and dark themes.
- Integrated DarkModeToggle into Navbar for easy access.
- Updated styles for various components to support dark mode, including Navbar, Insights, and Project items.
- Refactored ParticlesBackground to use Three.js for improved performance and visual effects.
- Enhanced BackToTop button with new styles and visibility logic.
- Improved ScrollProgressBar to use state for rendering progress.
- Adjusted animations and transitions for smoother user experience.
- Cleaned up unused code and dependencies, removing particles.js in favor of Three.js implementation.

--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   ],
   "author": "Penn Zhou",
   "dependencies": {
+    "@types/three": "^0.175.0",
     "aos": "^2.3.4",
-    "jquery": "^3.6.0",
     "gh-pages": "^4.0.0",
+    "jquery": "^3.6.0",
     "lightbox2": "^2.11.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "three": "^0.175.0"
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
