--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@types/three": "^0.175.0",
     "aos": "^2.3.4",
+    "framer-motion": "^12.9.1",
     "gh-pages": "^4.0.0",
     "jquery": "^3.6.0",
     "lightbox2": "^2.11.3",
