--- a/package.json
+++ b/package.json
@@ -11,12 +11,6 @@
     "deploy": "gh-pages -d dist",
     "typecheck": "tsc --noEmit"
   },
-  "keywords": [
-    "portfolio",
-    "personal-website",
-    "react"
-  ],
-  "author": "Penn Zhou",
   "dependencies": {
     "@types/three": "^0.175.0",
     "aos": "^2.3.4",
@@ -26,6 +20,7 @@
     "lightbox2": "^2.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-type-animation": "^3.2.0",
     "three": "^0.175.0"
   },
   "devDependencies": {
