feat: Integrate SEO component with React Helmet for improved metadata management. Refactor Gallery component to use 'yet-another-react-lightbox' for enhanced image viewing experience. Update styles and remove legacy lightbox dependencies.

--- a/package.json
+++ b/package.json
@@ -12,20 +12,21 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@types/react-helmet": "^6.1.11",
     "@types/three": "^0.175.0",
     "aos": "^2.3.4",
     "framer-motion": "^12.9.1",
     "gh-pages": "^4.0.0",
-    "jquery": "^3.6.0",
-    "lightbox2": "^2.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-type-animation": "^3.2.0",
-    "three": "^0.175.0"
+    "three": "^0.175.0",
+    "yet-another-react-lightbox": "^3.23.0"
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
-    "@types/jquery": "^3.5.29",
     "@types/node": "^20.10.7",
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
