--- a/package.json
+++ b/package.json
@@ -13,15 +13,17 @@
   },
   "dependencies": {
     "@types/react-helmet": "^6.1.11",
+    "@types/styled-components": "^5.1.34",
     "@types/three": "^0.175.0",
     "aos": "^2.3.4",
     "framer-motion": "^12.9.1",
-    "gh-pages": "^4.0.0",
+    "gh-pages": "^6.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
     "react-type-animation": "^3.2.0",
+    "styled-components": "^6.1.17",
     "three": "^0.175.0",
     "yet-another-react-lightbox": "^3.23.0"
   },
@@ -32,6 +34,6 @@
     "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^4.2.1",
     "typescript": "^5.3.3",
-    "vite": "^5.0.10"
+    "vite": "^6.3.4"
   }
 }
