Replacing css files with tailwind/daisyui

--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^4.2.1",
+    "@tailwindcss/vite": "^4.1.7",
+    "daisyui": "^5.0.35",
+    "tailwindcss": "^4.1.7",
     "typescript": "^5.3.3",
     "vite": "^6.3.4"
   }
