--- a/package.json
+++ b/package.json
@@ -12,28 +12,34 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@icons-pack/react-simple-icons": "^12.9.0",
     "@types/react-helmet": "^6.1.11",
     "@types/styled-components": "^5.1.34",
     "@types/three": "^0.175.0",
     "aos": "^2.3.4",
+    "cobe": "^0.6.3",
     "framer-motion": "^12.9.1",
     "gh-pages": "^6.3.0",
+    "lucide-react": "^0.511.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
+    "react-router-dom": "^7.6.1",
+    "react-spring": "^10.0.1",
     "react-type-animation": "^3.2.0",
     "styled-components": "^6.1.17",
     "three": "^0.175.0",
     "yet-another-react-lightbox": "^3.23.0"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.1.7",
     "@types/aos": "^3.0.7",
     "@types/node": "^20.10.7",
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.2.1",
-    "@tailwindcss/vite": "^4.1.7",
     "daisyui": "^5.0.35",
     "tailwindcss": "^4.1.7",
     "typescript": "^5.3.3",
