--- a/package.json
+++ b/package.json
@@ -17,10 +17,8 @@
     "cobe": "^0.6.3",
     "framer-motion": "^12.9.1",
     "lucide-react": "^0.511.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-helmet": "^6.1.0",
-    "react-helmet-async": "^2.0.5",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.1",
     "react-spring": "^10.0.1",
     "react-type-animation": "^3.2.0",
@@ -31,8 +29,8 @@
     "@tailwindcss/vite": "^4.1.7",
     "gh-pages": "^6.3.0",
     "@types/aos": "^3.0.7",
-    "@types/react": "^18.3.23",
-    "@types/react-dom": "^18.3.7",
+    "@types/react": "19.1.0",
+    "@types/react-dom": "19.1.0",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.2.1",
     "daisyui": "^5.0.35",
