--- a/package.json
+++ b/package.json
@@ -12,28 +12,28 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@icons-pack/react-simple-icons": "^12.9.0",
     "aos": "^2.3.4",
-    "cobe": "^0.6.3",
     "framer-motion": "^12.9.1",
-    "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-particles": "^2.12.2",
     "react-router-dom": "^7.6.1",
-    "react-spring": "^10.0.1",
     "react-type-animation": "^3.2.0",
     "styled-components": "^6.1.17",
+    "tsparticles": "^3.8.1",
+    "tsparticles-engine": "^2.12.0",
+    "tsparticles-slim": "^2.12.0",
     "yet-another-react-lightbox": "^3.23.0"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.7",
-    "gh-pages": "^6.3.0",
     "@types/aos": "^3.0.7",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.0",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.2.1",
     "daisyui": "^5.0.35",
+    "gh-pages": "^6.3.0",
     "tailwindcss": "^4.1.7",
     "typescript": "^5.3.3",
     "vite": "^6.3.4"
